test/errors/extended_members_error/zs/extended_in_recursion_error.zs
package extended_in_recursion_error;

struct Extended
{
    uint32 value;
    optional Extended recursive;
    extend string extendedValue;
};
